--- a/Projects.html
+++ b/Projects.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="./Projects.html">Projects <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="./index.html">Resume <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="./Resume.html">Resume <span class="sr-only">(current)</span></a>
               </li>
           </div>
     </nav>
