--- a/index.html
+++ b/index.html
@@ -24,11 +24,32 @@
                 <a class="nav-link" href="./Projects.html">Projects <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="./index.html">Resume <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="./Resume.html">Resume <span class="sr-only">(current)</span></a>
               </li>
           </div>
     </nav>
     <!-- Website Contents Starts Here -->
+
+    <div class="container">
+      <div class="d-flex justify-content-center">
+        <h1 style="text-align: center;padding: 40px;"> Welcome to my personal website!</h1>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <p style="font-size: x-large; text-indent: 35px;">
+            Hello, my name is Ethan Trapp. I’m currently studying physics and computer science at the University of Colorado Boulder with an anticipated graduation in May 2025. Through my studies, I’ve developed a passion for engineering. In particular, I have a strong interest in the field of quantum computing and developing new quantum technologies. I believe my academic background along with my work ethic and teamwork skills make me a strong future quantum engineer. 
+          </p>
+          <p style="font-size: x-large;text-indent: 35px;">
+            Outside of school, I like to keep active. I play ice hockey, snowboard, and lift weights. Additionally, I like to play video games. 
+          </p>
+        </div>
+        <div class="col-sm">
+          <img width=400 height=auto src="pictures/headshot.jpg" class="center">
+        </div>
+      </div>
+    </div>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
