--- a/Projects.html
+++ b/Projects.html
@@ -29,6 +29,68 @@
           </div>
     </nav>
     <!-- Website Contents Starts Here -->
+    <div class="container-fluid">
+      <div class="d-flex justify-content-center">
+        <h1 style="text-align: center;padding: 40px;"> Here are some projects I've completed!</h1>
+      </div>
+
+      <div style="padding-left: 40px; padding-right: 40px;"class="row">
+        <div class="col-sm">
+          <div class="card bg-light mb-3" style="max-width: 22rem;">
+            <div class="card-header">Autonomous Robot Navigation</div>
+            <div class="card-body"> 
+              <p class="card-text">During my 2023 internship at Lockheed Martin, I worked with a team of interns to write code for an arduino based robot. The robot was required to navigate a challenging obstacle course. This experience taught me more about the product develoment lifecycle.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card bg-light mb-3" style="max-width: 22rem;">
+            <div class="card-header">Post Quantum Cryptography Paper</div>
+            <div class="card-body">
+              <p class="card-text">For my Writing in Physics course, I wrote a review paper about the state of Post Quantum Cryptography. I gained experience communicating high level ideas to non experts as well as being precise in my writing. The paper can be found <a href="https://drive.google.com/file/d/1XumtlSV3wGx7JuD-o_dAff06MP6lMtNK/view?usp=sharing">here</a>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card bg-light mb-3" style="max-width: 22rem;">
+            <div class="card-header">This website :)</div>
+            <div class="card-body">
+              <p class="card-text">As a mini project to demonstrate my coding abilities, I wrote the HTML for this website. While I am not pursuing a job in web design, I think this shows I am able to quickly pickup a new too and make something worthwhile. The code can be found on my GitHub.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div style="padding-left: 40px; padding-right: 40px;"class="row">
+        <div class="col-sm">
+          <div class="card bg-light mb-3" style="max-width: 22rem;">
+            <div class="card-header">Quantum Hackathon 2023</div>
+            <div class="card-body"> 
+              <p class="card-text">During Spring 2024, I participated in a quantum hackathon at CU. I worked with other students over the course of 4 weeks to learn more about applications of quantum computing.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card bg-light mb-3" style="max-width: 22rem;">
+            <div class="card-header">Quantum Forge Capstone</div>
+            <div class="card-body">
+              <p class="card-text">Over the course of my senior year, I will complete the Quantum Forge capstone project. I will work with other students and an industry partner to solve a problem for them.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card bg-light mb-3" style="max-width: 22rem;">
+            <div class="card-header">Software Development Capstone</div>
+            <div class="card-body">
+              <p class="card-text">Over the course of my senior year, I will complete a software engineering capstone project. I will work with other students and an industry partner to solve a problem for them.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
