--- a/Resume.html
+++ b/Resume.html
@@ -30,6 +30,11 @@
     </nav>
     <!-- Website Contents Starts Here -->
 
+    <div class="container-fluid" style="padding:40px; text-align: center;">
+      <object class="pdf" data="pictures/EthanTrappResumeV2.pdf" width="1000px" height="600px">
+      </object>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
