--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="col-sm">
           <p style="font-size: x-large; text-indent: 35px;">
-            Hello, my name is Ethan Trapp. I’m currently studying physics and computer science at the University of Colorado Boulder with an anticipated graduation in May 2025. Through my studies, I’ve developed a passion for engineering. In particular, I have a strong interest in the field of quantum computing and developing new quantum technologies. I believe my academic background along with my work ethic and teamwork skills make me a strong future quantum engineer. 
+            Hello, my name is Ethan Trapp. I’m currently studying physics and computer science at the University of Colorado Boulder with an anticipated graduation in May 2025. Through my studies, I’ve developed a passion for engineering. In particular, I have a strong interest in the field of quantum computing and developing new quantum technologies. I believe my academic background, work ethic, and teamwork skills make me an excellent future quantum engineer. 
           </p>
           <p style="font-size: x-large;text-indent: 35px;">
             Outside of school, I like to keep active. I play ice hockey, snowboard, and lift weights. Additionally, I like to play video games. 
