--- a/Projects.html
+++ b/Projects.html
@@ -55,7 +55,7 @@
           <div class="card bg-light mb-3" style="max-width: 22rem;">
             <div class="card-header">This website :)</div>
             <div class="card-body">
-              <p class="card-text">As a mini project to demonstrate my coding abilities, I wrote the HTML for this website. While I am not pursuing a job in web design, I think this shows I am able to quickly pickup a new too and make something worthwhile. The code can be found on my GitHub.</p>
+              <p class="card-text">As a mini project to demonstrate my coding abilities, I wrote the HTML for this website. While I am not pursuing a job in web design, I think this shows I am able to quickly pickup a new tool and make something worthwhile. The code can be found on my GitHub.</p>
             </div>
           </div>
         </div>
